@@ -1,6 +1,7 @@
 package boss_tools_giselle_addon.common.item.crafting;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import net.mrscauthd.boss_tools.crafting.FluidIngredient;
@@ -10,7 +11,7 @@ public class FluidIngredientHelper
 	public static FluidIngredient of(Stream<FluidIngredient> fluids)
 	{
 		int amount = fluids.findAny().map(FluidIngredient::getAmount).orElse(0);
-		return new FluidIngredient.FluidMatch(fluids.map(FluidIngredient::getFluids).flatMap(List::stream).toList(), amount);
+		return new FluidIngredient.FluidMatch(fluids.map(FluidIngredient::getFluids).flatMap(List::stream).collect(Collectors.toList()), amount);
 	}
 
 	private FluidIngredientHelper()
